@@ -22,6 +22,9 @@
 
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
+	<LI>The command-line now allows --fontsize values from 4
+	to 26 to match the GUI.
+
 	<LI>Now use a 0.001 point tolerance when checking for
 	content that overflows the page/cell.
 
